Homework/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
