Homework/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: health-service
                port:
                  number: 8000
          - path: /otusapp/([^/]+)/(.*)
            pathType: Prefix
            backend:
              service:
                name: health-service
                port:
                  number: 8000
